<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              tools:context="com.example.yueuy.calculator.MainActivity"
              android:background="@drawable/DeepSpace"
              android:orientation="horizontal"
              android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="40sp"
        android:textColor="@color/colorText"
        android:id="@+id/editText"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/number_1"
        android:textColor="@color/colorText"
        android:background="@color/colorTextBackground"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_marginTop="120sp"
        android:id="@+id/button1"/>
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/number_2"
        android:textColor="@color/colorText"
        android:background="@color/colorTextBackground"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_toEndOf="@+id/button1"
        android:layout_marginTop="120sp"
        android:id="@+id/button2"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/number_3"
        android:textColor="@color/colorText"
        android:background="@color/colorTextBackground"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_toEndOf="@+id/button2"
        android:layout_marginTop="120sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/number_4"
        android:textColor="@color/colorText"
        android:background="@color/colorTextBackground"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_below="@+id/button1"
        android:id="@+id/button4"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/number_5"
        android:textColor="@color/colorText"
        android:background="@color/colorTextBackground"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_toEndOf="@+id/button4"
        android:layout_below="@+id/button2"
        android:id="@+id/button5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/number_6"
        android:textColor="@color/colorText"
        android:background="@color/colorTextBackground"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_toEndOf="@+id/button5"
        android:layout_below="@+id/button3"
        android:id="@+id/button6"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/number_7"
        android:textColor="@color/colorText"
        android:background="@color/colorTextBackground"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_below="@id/button4"
        android:id="@+id/button7"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/number_8"
        android:textColor="@color/colorText"
        android:background="@color/colorTextBackground"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_below="@id/button5"
        android:layout_toEndOf="@id/button7"
        android:id="@+id/button8"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/number_9"
        android:textColor="@color/colorText"
        android:background="@color/colorTextBackground"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_below="@id/button6"
        android:layout_toEndOf="@id/button8"
        android:id="@+id/button9"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/number_0"
        android:textColor="@color/colorText"
        android:textSize="36sp"
        android:background="@color/colorTextBackground"
        android:layout_below="@+id/button7"
        android:layout_toStartOf="@+id/buttonDot"/>
    <Button
        android:id="@+id/delete"
        android:layout_width="120sp"
        android:layout_height="80dp"
        android:text="delete"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        android:background="@color/colorTextBackground"
        android:layout_alignTop="@+id/button3"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/plus"
        android:textColor="@color/colorText"
        android:background="@color/colorTextBackground"
        android:textSize="50sp"
        android:gravity="center"
        android:layout_toEndOf="@+id/button6"
        android:layout_below="@+id/delete"
        android:id="@+id/buttonPlus"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/minus"
        android:textColor="@color/colorText"
        android:background="@color/colorTextBackground"
        android:textSize="50sp"
        android:gravity="center"
        android:layout_below="@id/buttonPlus"
        android:layout_toEndOf="@+id/button9"
        android:id="@+id/buttonMinus"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/multiply"
        android:textColor="@color/colorText"
        android:background="@color/colorTextBackground"
        android:textSize="50sp"
        android:gravity="center"
        android:id="@+id/buttonMultiply"
        android:layout_below="@+id/buttonMinus"
        android:layout_toEndOf="@+id/button9"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/divide"
        android:textColor="@color/colorText"
        android:background="@color/colorTextBackground"
        android:textSize="50sp"
        android:gravity="center"
        android:layout_below="@id/buttonMultiply"
        android:layout_toEndOf="@+id/buttonPercent"
        android:id="@+id/buttonDivide"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/dot"
        android:textColor="@color/colorText"
        android:background="@color/colorTextBackground"
        android:textSize="50sp"
        android:gravity="center"
        android:layout_below="@id/button9"
        android:layout_toStartOf="@+id/buttonMultiply"
        android:id="@+id/buttonDot"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/percent"
        android:textColor="@color/colorText"
        android:background="@color/colorTextBackground"
        android:textSize="50sp"
        android:gravity="center"
        android:id="@+id/buttonPercent"
        android:layout_below="@+id/buttonDot"
        android:layout_toEndOf="@+id/buttonEquals"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/equals"
        android:textColor="@color/colorText"
        android:background="@color/colorTextBackground"
        android:textSize="50sp"
        android:gravity="center"
        android:id="@+id/buttonEquals"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonMultiply"
        android:layout_toStartOf="@+id/button9"/>
</RelativeLayout>
